trendz-deployments/trendz-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: trendz
  labels:
    name: trendz
---
